test/fail_compilation/fail71.d

class C
{
    const int y;

    this()
    {	C c = this;

	y = 7;
	c.y = 8;
    }
}
